5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4443/executions/1807_2572.log
== TEST (2019-06-07 21:45:04) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))

impar = 0
for i in range(size(mat)):
	if(mat[i]%2 != 0):
		impar = impar + 1

veci = zeros(impar, dtype=int)
for i in range(size(mat)):
	if(mat[i]%2 != 0):
		veci = veci + mat[i]
print(veci)
		
		
print(veci)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 21:48:14) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))

impar = 0
for i in range(size(mat)):
	if(mat[i]%2 != 0):
		impar = impar + 1
print(impar)
veci = zeros(impar, dtype=int)
for i in range(size(mat)):
	if(mat[i]%2 != 0):
		veci = veci + mat[i]
print(veci)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 21:50:45) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))

impar = 0
for i in range(size(mat)):
	if(mat[i]%2 != 0):
		impar = impar + 1

veci = zeros(impar, dtype=int)
for imp in range(size(mat)):
	if(mat[imp]%2 != 0):
		veci = veci + mat[imp]
print(veci)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 21:52:03) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))

impar = 0
for i in range(size(mat)):
	if(mat[i]%2 != 0):
		impar = impar + 1

veci = zeros(impar, dtype=int)
for imp in mat:
	if(imp%2 != 0):
		veci = veci + imp
print(veci)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 21:52:59) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))

impar = 0
for i in range(size(mat)):
	if(mat[i]%2 != 0):
		impar = impar + 1

veci = zeros(impar, dtype=int)
for imp in mat:
	if(imp%2 == 0):
		veci = veci
	else: 	
		veci = veci + imp
print(veci)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 21:54:18) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))

impar = 0
for i in mat:
	if(i%2 != 0):
		impar = impar + 1

veci = zeros(impar, dtype=int)
for imp in mat:
	if(imp%2 == 0):
		veci = veci
	else: 	
		veci = veci + imp
print(veci)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-07 21:54:53) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))

impar = 0
for i in mat:
	if(i%2 != 0):
		impar = impar + 1

veci = zeros(impar, dtype=int)
for imp in mat:
	if(imp%2 == 0):
		veci = veci
	else: 	
		veci = veci + imp
print(veci)	

-- EXECUTION TIME:
1.01285
-- TEST CASE 1:
---- input:
[75247561,76546316,75713658,97135671,70356874]
---- correct output:
[75247561 97135671]
---- user output:
[172383232 172383232]
-- TEST CASE 2:
---- input:
[13017594,57417542,85024758,12475981,75942785,91875987,29584192,85794217]
---- correct output:
[12475981 75942785 91875987 85794217]
---- user output:
[266088970 266088970 266088970 266088970]
-- TEST CASE 3:
---- input:
[31874903,74902746,23742046]
---- correct output:
[31874903]
---- user output:
[31874903]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 21:56:17) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))
print(mat)
impar = 0
for i in mat:
	if(i%2 != 0):
		impar = impar + 1

veci = zeros(impar, dtype=int)
for imp in mat:
	if(imp%2 == 0):
		veci = veci
	else: 	
		veci = veci + imp
print(veci)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 23:11:44) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))
print(mat)
impar = 0
for i in mat:
	if(i%2 != 0):
		impar = impar + 1

veci = zeros(impar, dtype=int)
for imp in mat:
	if(imp%2 == 0):
		veci = veci
	else: 	
		veci = veci + imp
print(veci)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 23:12:49) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))
print(mat)
impar = 0
for i in mat:
	if(i%2 != 0):
		impar = impar + 1

veci = zeros(impar, dtype=int)
for imp in mat:
	if(imp%2 == 0):
		veci = veci
	else: 	
		veci = veci + imp
print(veci)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 23:18:36) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))
print(mat)
impar = 0
for i in mat:
	if(i%2 != 0):
		impar = impar + 1

veci = zeros(impar, dtype=int)
i =0 
while(i < size(veci)):
	for imp in mat:
		if(imp%2 == 0):
			veci = veci
		else: 	
			veci[i] = veci[i] + imp
print(veci)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 23:20:08) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))
print(mat)
impar = 0
for i in mat:
	if(i%2 != 0):
		impar = impar + 1

veci = zeros(impar, dtype=int)
i =0 
while(i < size(veci)):
	for imp in mat:
		if(imp%2 == 0):
			veci = veci
		else: 	
			veci[i] = veci[i] + imp
	i = i+1		
print(veci)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 23:20:48) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))
print(mat)
impar = 0
for i in mat:
	if(i%2 != 0):
		impar = impar + 1

veci = zeros(impar, dtype=int)
i =0 
while(i < size(veci)):
	for imp in mat:
		if(imp%2 == 0):
			veci = veci
		else: 	
			veci[i] = veci[i] + imp
	i = i+1		
print(veci)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 23:21:09) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))
print(mat)
impar = 0
for i in mat:
	if(i%2 != 0):
		impar = impar + 1

veci = zeros(impar, dtype=int)
i =0 
while(i < size(veci)):
	for imp in mat:
		if(imp%2 == 0):
			veci = veci
		else: 	
			veci[i] = veci[i] + imp
	i = i+1		
print(veci)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 23:23:28) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))
print(mat)
impar = 0
for i in mat:
	if(i%2 != 0):
		impar = impar + 1

veci = zeros(impar, dtype=int)
i =0 
while(i < size(veci)):
	for imp in mat:
		if(imp%2 == 0):
			veci = veci
		else: 	
			veci[i] = veci[i] + imp
	i = i+1		
	print(veci)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 23:23:58) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))
print(mat)
impar = 0
for i in mat:
	if(i%2 != 0):
		impar = impar + 1

veci = zeros(impar, dtype=int)
i =0 
while(i < size(veci)):
	for imp in mat:
		if(imp%2 == 0):
			veci = veci
		else: 	
			veci[i] = veci[i] + imp
	i = i+1		
	print(veci)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 23:24:45) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))
print(mat)
impar = 0
for i in mat:
	if(i%2 != 0):
		impar = impar + 1

veci = zeros(impar, dtype=int)
i =0 
while(i < size(veci)):
	for imp in mat:
		if(imp%2 == 0):
			veci = veci
		else: 	
			veci[i] = veci[i] + mat[i]
	i = i+1		
	print(veci)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 23:27:56) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))
print(mat)
impar = 0
for i in mat:
	if(i%2 != 0):
		impar = impar + 1

veci = zeros(impar, dtype=int)
i =0 
while(i < size(veci)):
	for imp in mat:
		if(imp%2 == 0):
			veci = veci
		else: 	
			veci[i] = veci[i]
	i = i+1		
	print(veci)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 23:28:30) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))
print(mat)
impar = 0
for i in mat:
	if(i%2 != 0):
		impar = impar + 1

veci = zeros(impar, dtype=int)
i =0 
while(i < size(veci)):
	for imp in mat:
		if(imp%2 == 0):
			veci = veci
		else: 	
			veci[i] = veci
	i = i+1		
	print(veci)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 23:30:08) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))
print(mat)
impar = 0
for i in mat:
	if(i%2 != 0):
		impar = impar + 1

veci = zeros(impar, dtype=int)
i =0 
while(i < size(veci)):
	for imp in mat:
		if(imp%2 == 0):
			veci = veci
		else: 	
			veci[i] = veci[i] + imp
	i = i+1		
	print(veci)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 23:30:32) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))
print(mat)
impar = 0
for i in mat:
	if(i%2 != 0):
		impar = impar + 1

veci = zeros(impar, dtype=int)
i =0 
while(i < size(veci)):
	for imp in mat:
		if(imp%2 == 0):
			veci = veci
		else: 	
			veci[i] = veci[i] + imp
	i = i+1		
	print(veci)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 23:30:44) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))
print(mat)
impar = 0
for i in mat:
	if(i%2 != 0):
		impar = impar + 1

veci = zeros(impar, dtype=int)
i =0 
while(i < size(veci)):
	for imp in mat:
		if(imp%2 == 0):
			veci = veci
		else: 	
			veci[i] = veci[i] + imp
	i = i+1		
	print(veci)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 23:31:02) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))
print(mat)
impar = 0
for i in mat:
	if(i%2 != 0):
		impar = impar + 1

veci = zeros(impar, dtype=int)
i =0 
while(i < size(veci)):
	for imp in mat:
		if(imp%2 == 0):
			veci = veci
		else: 	
			veci[i] = veci[i] + imp
	i = i+1		
	print(veci)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 23:32:16) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))
print(mat)
impar = 0
for i in mat:
	if(i%2 != 0):
		impar = impar + 1

veci = zeros(impar, dtype=int)
i =0 
while(i < size(veci)):
	for imp in mat:
		if(imp%2 == 0):
			veci = veci
		else: 	
			veci[i] = mat[i]
	i = i+1		
	print(veci)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 23:33:20) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))
print(mat)
impar = 0
for i in mat:
	if(i%2 != 0):
		impar = impar + 1

veci = zeros(impar, dtype=int)
#i =0 
3while(i < size(veci)):
for imp in mat:
	if(imp%2 == 0):
		veci = veci
	else: 	
		veci[i] = mat[i]
#	i = i+1		
print(veci)	

-- ERROR:
File "XXXX", line 11
    3while(i < size(veci)):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 23:33:36) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))
print(mat)
impar = 0
for i in mat:
	if(i%2 != 0):
		impar = impar + 1

veci = zeros(impar, dtype=int)
#i =0 
#while(i < size(veci)):
for imp in mat:
	if(imp%2 == 0):
		veci = veci
	else: 	
		veci[i] = mat[i]
#	i = i+1		
print(veci)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 23:34:37) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))
print(mat)
impar = 0
for i in mat:
	if(i%2 != 0):
		impar = impar + 1

veci = zeros(impar, dtype=int)
i =0 
while(i < size(veci)):
	for imp in mat:
		if(imp%2 == 0):
			veci = veci
		else: 	
			veci[i] = mat[i]
	i = i+1		
print(veci)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 23:35:53) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))

impar = 0
for i in mat:
	if(i%2 != 0):
		impar = impar + 1

veci = zeros(impar, dtype=int)
i =0 
while(i < size(veci)):
	for imp in mat:
		if(imp%2 == 0):
			veci = veci
		else: 	
			veci[i] = mat[i]
	i = i+1		
print(veci)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 23:37:24) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))

impar = 0
for i in mat:
	if(i%2 != 0):
		impar = impar + 1

veci = zeros(impar, dtype=int)
i =0 
while(i < size(veci)):
		if(mat[i]%2 == 0):
			veci = veci
		else: 	
			veci[i] = mat[i]
	i = i+1		
print(veci)	

-- ERROR:
File "XXXX", line 16
    i = i+1		
            ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 23:37:48) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))

impar = 0
for i in mat:
	if(i%2 != 0):
		impar = impar + 1

veci = zeros(impar, dtype=int)
i =0 
while(i < size(veci)):
	if(mat[i]%2 == 0):
		veci = veci
	else: 	
		veci[i] = mat[i]
	i = i+1		
print(veci)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 23:38:51) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))

impar = 0
for i in mat:
	if(i%2 != 0):
		impar = impar + 1

veci = zeros(impar, dtype=int)
i =0 
while(i < size(veci)):
	if(mat[i]%2 == 0):
		veci = veci
	else: 	
		veci[i] = mat[i]
	i = i+1		
print(veci)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 23:40:05) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))

impar = 0
for i in mat:
	if(i%2 != 0):
		impar = impar + 1

veci = zeros(impar, dtype=int)
i =0 
while(i < size(veci)):
	if(mat[i]%2 == 0):
		veci = veci
	else: 	
		veci[i] == mat[i]
	i = i+1		
print(veci)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 23:40:50) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))

impar = 0
for i in mat:
	if(i%2 != 0):
		impar = impar + 1

veci = zeros(impar, dtype=int)
i =0 
while(i < size(veci)):
	if(mat[i]%2 == 0):
		veci[i] = veci[i]
	else: 	
		veci[i] = mat[i]
	i = i+1		
print(veci)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 23:41:42) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))

impar = 0
for i in mat:
	if(i%2 != 0):
		impar = impar + 1

veci = zeros(impar, dtype=int)
i =0 
while(i < size(veci)):
	if(mat[i]%2 != 0):
		veci[i] = mat[i]
	i = i+1		
print(veci)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 23:42:17) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))

impar = 0
for i in mat:
	if(i%2 != 0):
		impar = impar + 1

veci = zeros(impar, dtype=int)
i =0 
while(i < size(veci)):
	if(mat[i]%2 != 0):
		veci[i] = mat[i]
	i = i+1		
print(veci)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 23:43:01) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))

impar = 0
for i in mat:
	if(i%2 != 0):
		impar = impar + 1

veci = zeros(impar, dtype=int)
i =0 
while(i < size(veci)):
	if(mat[i]%2 != 0):
		veci[i] = mat[i]
	i = i+1		
print(veci)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 23:45:54) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))

impar = 0
for i in mat:
	if(i%2 != 0):
		impar = impar + 1

veci = zeros(impar, dtype=int)
i = 0
n = 0
while(i < size(veci)):
	if(mat[i]%2 != 0):
		veci[i] = mat[i]
		i = i+1
		n = n+1
	i = i+1
	n = n
print(veci)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 23:47:49) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))

impar = 0
for i in mat:
	if(i%2 != 0):
		impar = impar + 1

veci = zeros(impar, dtype=int)
i = 0
n = 0
while(n < size(veci)):
	if(mat[i]%2 != 0):
		veci[n] = mat[i]
		i = i+1
		n = n+1
	i = i+1
	n = n
print(veci)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 23:48:20) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))

impar = 0
for i in mat:
	if(i%2 != 0):
		impar = impar + 1

veci = zeros(impar, dtype=int)
i = 0
n = 0
while(n < size(veci)):
	if(mat[i]%2 != 0):
		veci[n] = mat[i]
		i = i+1
		n = n+1
	i = i+1
	n = n
print(veci)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 23:49:23) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))

impar = 0
for i in mat:
	if(i%2 != 0):
		impar = impar + 1

veci = zeros(impar, dtype=int)
i = 0
n = 0
while(n < size(veci)):
	if(mat[i]%2 != 0):
		veci[n] = mat[i]
		i = i+1
		n = n+1
	i = i+1
	n = n
print(veci)	

-- EXECUTION TIME:
1.19191
-- TEST CASE 1:
---- input:
[75247561,76546316,75713658,97135671,70356874]
---- correct output:
[75247561 97135671]
---- user output:
[75247561 97135671]
-- TEST CASE 2:
---- input:
[13017594,57417542,85024758,12475981,75942785,91875987,29584192,85794217]
---- correct output:
[12475981 75942785 91875987 85794217]
---- user output:

-- TEST CASE 3:
---- input:
[31874903,74902746,23742046]
---- correct output:
[31874903]
---- user output:
[31874903]
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 23:49:33) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))

impar = 0
for i in mat:
	if(i%2 != 0):
		impar = impar + 1

veci = zeros(impar, dtype=int)
i = 0
n = 0
while(n < size(veci)):
	if(mat[i]%2 != 0):
		veci[n] = mat[i]
		i = i+1
		n = n+1
	i = i+1
	n = n
print(veci)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 23:53:31) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))

impar = 0
for i in mat:
	if(i%2 != 0):
		impar = impar + 1

veci = zeros(impar, dtype=int)
for n in range(size(veci)):
	if(mat[i]%2 != 0):
		veci[n] = mat[i]
print(veci)	
#i = 0
#n = 0
#while(n < size(veci)):
#	if(mat[i]%2 != 0):
#		veci[n] = mat[i]
#		i = i+1
#		n = n+1
#	i = i+1
#	n = n
#print(veci)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 23:53:41) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))

impar = 0
for i in mat:
	if(i%2 != 0):
		impar = impar + 1

veci = zeros(impar, dtype=int)
for n in range(size(veci)):
	if(mat[i]%2 != 0):
		veci[n] = mat[i]
print(veci)	
#i = 0
#n = 0
#while(n < size(veci)):
#	if(mat[i]%2 != 0):
#		veci[n] = mat[i]
#		i = i+1
#		n = n+1
#	i = i+1
#	n = n
#print(veci)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 23:55:05) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))

impar = 0
for i in mat:
	if(i%2 != 0):
		impar = impar + 1

veci = zeros(impar, dtype=int)
for i in range(size(mat)):
	if(mat[i]%2 != 0):
		veci[i] = mat[i]
print(veci)	
#i = 0
#n = 0
#while(n < size(veci)):
#	if(mat[i]%2 != 0):
#		veci[n] = mat[i]
#		i = i+1
#		n = n+1
#	i = i+1
#	n = n
#print(veci)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 21:58:12) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))

impar = 0
for i in mat:
	if(i%2 != 0):
		impar = impar + 1

veci = zeros(impar, dtype=int)
for i in range(size(mat)):
	if(mat[i]%2 != 0):
		veci[i] = mat[i]
print(veci)	
#i = 0
#n = 0
#while(n < size(veci)):
#	if(mat[i]%2 != 0):
#		veci[n] = mat[i]
#		i = i+1
#		n = n+1
#	i = i+1
#	n = n
#print(veci)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 22:02:11) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))
impar = 0
for i in mat:
	if(i%2 != 0):
		impar = impar + 1
veci = zeros(impar, dtype=int)
for i in range(size(veci)):
	if(mat[i]%2 != 0):
		veci[i] = mat[i]
print(veci)	
#i = 0
#n = 0
#while(n < size(veci)):
#	if(mat[i]%2 != 0):
#		veci[n] = mat[i]
#		i = i+1
#		n = n+1
#	i = i+1
#	n = n
#print(veci)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 22:04:04) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))
impar = 0
for i in mat:
	if(i%2 != 0):
		impar = impar + 1
veci = zeros(impar, dtype=int)
for i in mat:
	if(i%2 != 0):
		veci[i] = mat[i]
print(veci)	
#i = 0
#n = 0
#while(n < size(veci)):
#	if(mat[i]%2 != 0):
#		veci[n] = mat[i]
#		i = i+1
#		n = n+1
#	i = i+1
#	n = n
#print(veci)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 22:07:40) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))
impar = 0
for i in mat:
	if(i%2 != 0):
		impar = impar + 1
veci = zeros(impar, dtype=int)
for i in mat:
	if(i%2 != 0):
		veci.append(mat[i])
print(veci)	
#i = 0
#n = 0
#while(n < size(veci)):
#	if(mat[i]%2 != 0):
#		veci[n] = mat[i]
#		i = i+1
#		n = n+1
#	i = i+1
#	n = n
#print(veci)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 22:07:58) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))
impar = 0
for i in mat:
	if(i%2 != 0):
		impar = impar + 1
veci = zeros(impar, dtype=int)
for i in mat:
	if(i%2 != 0):
		veci.apend(mat[i])
print(veci)	
#i = 0
#n = 0
#while(n < size(veci)):
#	if(mat[i]%2 != 0):
#		veci[n] = mat[i]
#		i = i+1
#		n = n+1
#	i = i+1
#	n = n
#print(veci)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 22:54:26) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))
impar = 0
for i in mat:
	if(i%2 != 0):
		impar = impar + 1
veci = zeros(impar, dtype=int)
for i in mat:
	if(i%2 != 0):
		print(i)
#print(veci)	
#i = 0
#n = 0
#while(n < size(veci)):
#	if(mat[i]%2 != 0):
#		veci[n] = mat[i]
#		i = i+1
#		n = n+1
#	i = i+1
#	n = n
#print(veci)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 07:44:39) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))
impar = 0
for n in mat:
	if(n%2 != 0):
		impar = impar + 1
veci = zeros(impar, dtype=int)
print(impar)
print(veci)
for i in range(size(mat)):
	if(mat[i]%2 != 0):
		print(i)
#print(veci)	
#i = 0
#n = 0
#while(n < size(veci)):
#	if(mat[i]%2 != 0):
#		veci[n] = mat[i]
#		i = i+1
#		n = n+1
#	i = i+1
#	n = n
#print(veci)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 07:46:17) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))
impar = 0
for n in mat:
	if(n%2 != 0):
		impar = impar + 1
veci = zeros(impar, dtype=int)
print(impar)
print(veci)
for i in range(size(mat)):
	if(mat[i]%2 != 0):
		print(mat[i])
#print(veci)	
#i = 0
#n = 0
#while(n < size(veci)):
#	if(mat[i]%2 != 0):
#		veci[n] = mat[i]
#		i = i+1
#		n = n+1
#	i = i+1
#	n = n
#print(veci)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 07:46:34) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))
impar = 0
for n in mat:
	if(n%2 != 0):
		impar = impar + 1
veci = zeros(impar, dtype=int)
print(impar)
print(veci)
for i in range(size(mat)):
	if(mat[i]%2 != 0):
		print(mat[i])
#print(veci)	
#i = 0
#n = 0
#while(n < size(veci)):
#	if(mat[i]%2 != 0):
#		veci[n] = mat[i]
#		i = i+1
#		n = n+1
#	i = i+1
#	n = n
#print(veci)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 07:46:49) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))
impar = 0
for n in mat:
	if(n%2 != 0):
		impar = impar + 1
veci = zeros(impar, dtype=int)
print(impar)
print(veci)
for i in range(size(mat)):
	if(mat[i]%2 != 0):
		print(mat[i])
#print(veci)	
#i = 0
#n = 0
#while(n < size(veci)):
#	if(mat[i]%2 != 0):
#		veci[n] = mat[i]
#		i = i+1
#		n = n+1
#	i = i+1
#	n = n
#print(veci)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 07:48:49) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))
impar = 0
for n in mat:
	if(n%2 != 0):
		impar = impar + 1
veci = zeros(impar, dtype=int)
for i in range(size(mat)):
	if(mat[i]%2 != 0):
		veci = mat[i]
print(mat[i])
#print(veci)	
#i = 0
#n = 0
#while(n < size(veci)):
#	if(mat[i]%2 != 0):
#		veci[n] = mat[i]
#		i = i+1
#		n = n+1
#	i = i+1
#	n = n
#print(veci)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 07:49:17) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))
impar = 0
for n in mat:
	if(n%2 != 0):
		impar = impar + 1
veci = zeros(impar, dtype=int)
for i in range(size(mat)):
	if(mat[i]%2 != 0):
		veci = mat[i]
print(veci)
#print(veci)	
#i = 0
#n = 0
#while(n < size(veci)):
#	if(mat[i]%2 != 0):
#		veci[n] = mat[i]
#		i = i+1
#		n = n+1
#	i = i+1
#	n = n
#print(veci)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 07:49:37) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))
impar = 0
for n in mat:
	if(n%2 != 0):
		impar = impar + 1
veci = zeros(impar, dtype=int)
for i in range(size(mat)):
	if(mat[i]%2 != 0):
		veci = veci + mat[i]
print(veci)
#print(veci)	
#i = 0
#n = 0
#while(n < size(veci)):
#	if(mat[i]%2 != 0):
#		veci[n] = mat[i]
#		i = i+1
#		n = n+1
#	i = i+1
#	n = n
#print(veci)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 07:49:51) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))
impar = 0
for n in mat:
	if(n%2 != 0):
		impar = impar + 1
veci = zeros(impar, dtype=int)
for i in range(size(mat)):
	if(mat[i]%2 != 0):
		veci = veci + mat[i]
print(veci)
#print(veci)	
#i = 0
#n = 0
#while(n < size(veci)):
#	if(mat[i]%2 != 0):
#		veci[n] = mat[i]
#		i = i+1
#		n = n+1
#	i = i+1
#	n = n
#print(veci)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 07:50:34) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))
impar = 0
for n in mat:
	if(n%2 != 0):
		impar = impar + 1
veci = zeros(impar, dtype=int)
for i in range(size(mat)):
	if(mat[i]%2 != 0):
		veci = mat
print(veci)
#print(veci)	
#i = 0
#n = 0
#while(n < size(veci)):
#	if(mat[i]%2 != 0):
#		veci[n] = mat[i]
#		i = i+1
#		n = n+1
#	i = i+1
#	n = n
#print(veci)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 07:52:40) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))
impar = 0
for n in mat:
	if(n%2 != 0):
		impar = impar + 1
veci = zeros(impar, dtype=int)
for i in range(size(mat)):
	if(mat[i]%2 == 0):
		veci[i] = vec[i]
	else:
		veci[i] = mat[i]
print(veci)
#print(veci)	
#i = 0
#n = 0
#while(n < size(veci)):
#	if(mat[i]%2 != 0):
#		veci[n] = mat[i]
#		i = i+1
#		n = n+1
#	i = i+1
#	n = n
#print(veci)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 07:52:56) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))
impar = 0
for n in mat:
	if(n%2 != 0):
		impar = impar + 1
veci = zeros(impar, dtype=int)
for i in range(size(mat)):
	if(mat[i]%2 == 0):
		veci[i] = veci[i]
	else:
		veci[i] = mat[i]
print(veci)
#print(veci)	
#i = 0
#n = 0
#while(n < size(veci)):
#	if(mat[i]%2 != 0):
#		veci[n] = mat[i]
#		i = i+1
#		n = n+1
#	i = i+1
#	n = n
#print(veci)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 07:53:30) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))
impar = 0
for n in mat:
	if(n%2 != 0):
		impar = impar + 1
veci = zeros(impar, dtype=int)
for i in range(size(mat)):
	if(mat[i]%2 == 0):
		veci = veci
	else:
		veci[i] = mat[i]
print(veci)
#print(veci)	
#i = 0
#n = 0
#while(n < size(veci)):
#	if(mat[i]%2 != 0):
#		veci[n] = mat[i]
#		i = i+1
#		n = n+1
#	i = i+1
#	n = n
#print(veci)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 07:56:50) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))
impar = 0
for n in mat:
	if(n%2 != 0):
		impar = impar + 1
veci = zeros(impar, dtype=int)
for i in range(size(mat)):
	if(mat[i]%2 == 0):
		veci = veci
	else:
		print = mat[i]
print(veci)
#print(veci)	
#i = 0
#n = 0
#while(n < size(veci)):
#	if(mat[i]%2 != 0):
#		veci[n] = mat[i]
#		i = i+1
#		n = n+1
#	i = i+1
#	n = n
#print(veci)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 07:57:09) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))
impar = 0
for n in mat:
	if(n%2 != 0):
		impar = impar + 1
veci = zeros(impar, dtype=int)
for i in range(size(mat)):
	if(mat[i]%2 == 0):
		veci = veci
	else:
		print = mat[i]
#print(veci)
#print(veci)	
#i = 0
#n = 0
#while(n < size(veci)):
#	if(mat[i]%2 != 0):
#		veci[n] = mat[i]
#		i = i+1
#		n = n+1
#	i = i+1
#	n = n
#print(veci)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 07:57:51) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))
impar = 0
for n in mat:
	if(n%2 != 0):
		impar = impar + 1
veci = zeros(impar, dtype=int)
for i in range(size(mat)):
	if(mat[i]%2 == 0):
		veci = veci
		print(veci)
	else:
		print = mat[i]
#print(veci)
#print(veci)	
#i = 0
#n = 0
#while(n < size(veci)):
#	if(mat[i]%2 != 0):
#		veci[n] = mat[i]
#		i = i+1
#		n = n+1
#	i = i+1
#	n = n
#print(veci)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 08:00:07) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))
impar = 0
for n in mat:
	if(n%2 != 0):
		impar = impar + 1
veci = zeros(impar, dtype=int)
for i in range(size(mat)):
	if(mat[i]%2 == 0):
		print(veci[i])
	else:
		print = mat[i]
#print(veci)
#print(veci)	
#i = 0
#n = 0
#while(n < size(veci)):
#	if(mat[i]%2 != 0):
#		veci[n] = mat[i]
#		i = i+1
#		n = n+1
#	i = i+1
#	n = n
#print(veci)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 08:00:17) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))
impar = 0
for n in mat:
	if(n%2 != 0):
		impar = impar + 1
veci = zeros(impar, dtype=int)
for i in range(size(mat)):
	if(mat[i]%2 == 0):
		print(veci[i])
	else:
		print = mat[i]
#print(veci)
#print(veci)	
#i = 0
#n = 0
#while(n < size(veci)):
#	if(mat[i]%2 != 0):
#		veci[n] = mat[i]
#		i = i+1
#		n = n+1
#	i = i+1
#	n = n
#print(veci)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 08:00:32) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))
impar = 0
for n in mat:
	if(n%2 != 0):
		impar = impar + 1
veci = zeros(impar, dtype=int)
print(veci)
for i in range(size(mat)):
	if(mat[i]%2 == 0):
		print(veci[i])
	else:
		print = mat[i]
#print(veci)
#print(veci)	
#i = 0
#n = 0
#while(n < size(veci)):
#	if(mat[i]%2 != 0):
#		veci[n] = mat[i]
#		i = i+1
#		n = n+1
#	i = i+1
#	n = n
#print(veci)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 08:01:26) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))
impar = 0
for n in mat:
	if(n%2 != 0):
		impar = impar + 1
veci = zeros(impar, dtype=int)
print(veci)
for i in range(size(mat)):
	print(mat[i])
	if(mat[i]%2 == 0):
		print(veci[i])
	else:
		print = mat[i]
#print(veci)
#print(veci)	
#i = 0
#n = 0
#while(n < size(veci)):
#	if(mat[i]%2 != 0):
#		veci[n] = mat[i]
#		i = i+1
#		n = n+1
#	i = i+1
#	n = n
#print(veci)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 08:03:16) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))
impar = 0
for n in mat:
	if(n%2 != 0):
		impar = impar + 1
veci = zeros(impar, dtype=int)
print(veci)
for i in range(size(mat)):
	if(mat[i]%2 != 0):
		print(mat[i])

		#print(veci)
#print(veci)	
#i = 0
#n = 0
#while(n < size(veci)):
#	if(mat[i]%2 != 0):
#		veci[n] = mat[i]
#		i = i+1
#		n = n+1
#	i = i+1
#	n = n
#print(veci)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 08:05:59) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))
impar = 0
for n in mat:
	if(n%2 != 0):
		impar = impar + 1
veci = zeros(impar, dtype=int)
print(veci)
for i in range(size(mat)):
	if(mat[i]%2 != 0):
		veci[impar-i] = mat[i]
print(veci)
		#print(veci)
#print(veci)	
#i = 0
#n = 0
#while(n < size(veci)):
#	if(mat[i]%2 != 0):
#		veci[n] = mat[i]
#		i = i+1
#		n = n+1
#	i = i+1
#	n = n
#print(veci)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 08:13:00) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))
impar = 0
for n in mat:
	if(n%2 != 0):
		impar = impar + 1
veci = zeros(impar, dtype=int)
print(veci)
i=0
while(i<impar):
	for n in mat:
		if(n%2 != 0):
			veci[i] = n
	i = i+1		
print(veci)
#print(veci)
#print(veci)	
#i = 0
#n = 0
#while(n < size(veci)):
#	if(mat[i]%2 != 0):
#		veci[n] = mat[i]
#		i = i+1
#		n = n+1
#	i = i+1
#	n = n
#print(veci)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 08:14:31) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))
impar = 0
for n in mat:
	if(n%2 != 0):
		impar = impar + 1
veci = zeros(impar, dtype=int)

i=0
while(i<impar):
	for n in mat:
		if(n%2 != 0):
			veci[i] = n
			print(veci)
	i = i+1		

#print(veci)
#print(veci)	
#i = 0
#n = 0
#while(n < size(veci)):
#	if(mat[i]%2 != 0):
#		veci[n] = mat[i]
#		i = i+1
#		n = n+1
#	i = i+1
#	n = n
#print(veci)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 08:17:33) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))
impar = 0
for n in mat:
	if(n%2 != 0):
		impar = impar + 1
veci = zeros(impar, dtype=int)

i=0
while(i<impar):
	for n in range(size(mat)):
		if(mat[n]%2 != 0):
			veci[i] = mat[n]
			print(veci)
	i = i+1		

#print(veci)
#print(veci)	
#i = 0
#n = 0
#while(n < size(veci)):
#	if(mat[i]%2 != 0):
#		veci[n] = mat[i]
#		i = i+1
#		n = n+1
#	i = i+1
#	n = n
#print(veci)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 08:19:04) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))
impar = 0
for n in mat:
	if(n%2 != 0):
		impar = impar + 1
veci = zeros(impar, dtype=int)

i=0
while(i<impar):
	for n in range(size(mat)):
		if(mat[n]%2 != 0):
			veci[i] = mat[n]
			i = i+1
		else:
			i = i
print(veci)	
#i = 0
#n = 0
#while(n < size(veci)):
#	if(mat[i]%2 != 0):
#		veci[n] = mat[i]
#		i = i+1
#		n = n+1
#	i = i+1
#	n = n
#print(veci)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 08:19:28) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))
impar = 0
for n in mat:
	if(n%2 != 0):
		impar = impar + 1
veci = zeros(impar, dtype=int)

i=0
while(i<impar):
	for n in range(size(mat)):
		if(mat[n]%2 != 0):
			veci[i] = mat[n]
			i = i+1
		else:
			i = i
print(veci)	
#i = 0
#n = 0
#while(n < size(veci)):
#	if(mat[i]%2 != 0):
#		veci[n] = mat[i]
#		i = i+1
#		n = n+1
#	i = i+1
#	n = n
#print(veci)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 08:19:42) 
-- CODE:
from numpy import *
mat = array(eval(input("Digite os numeros de mat dos estudantes: ")))
impar = 0
for n in mat:
	if(n%2 != 0):
		impar = impar + 1
veci = zeros(impar, dtype=int)

i=0
while(i<impar):
	for n in range(size(mat)):
		if(mat[n]%2 != 0):
			veci[i] = mat[n]
			i = i+1
		else:
			i = i
print(veci)	
#i = 0
#n = 0
#while(n < size(veci)):
#	if(mat[i]%2 != 0):
#		veci[n] = mat[i]
#		i = i+1
#		n = n+1
#	i = i+1
#	n = n
#print(veci)	

-- EXECUTION TIME:
1.13886
-- TEST CASE 1:
---- input:
[75247561,76546316,75713658,97135671,70356874]
---- correct output:
[75247561 97135671]
---- user output:
[75247561 97135671]
-- TEST CASE 2:
---- input:
[13017594,57417542,85024758,12475981,75942785,91875987,29584192,85794217]
---- correct output:
[12475981 75942785 91875987 85794217]
---- user output:
[12475981 75942785 91875987 85794217]
-- TEST CASE 3:
---- input:
[31874903,74902746,23742046]
---- correct output:
[31874903]
---- user output:
[31874903]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
